force-app/main/default/objects/Project__c/fields/Branches_del__c.field-meta.xml
<CustomField>
    <fullName>Branches_del__c</fullName>
    <label>Branches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>BioTech</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>EC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>