force-app/main/default/objects/Project__c/fields/Colleages__c.field-meta.xml
<CustomField>
    <fullName>Colleages__c</fullName>
    <label>Colleages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Show_Colleage_List__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veera</fullName>
            </value>
            <value>
                <fullName>Vikek</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>RVIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>