force-app/main/default/objects/Project__c/fields/Project_phone__c.field-meta.xml
<CustomField>
    <fullName>Project_phone__c</fullName>
    <formula>Account__r.Phone</formula>
    <label>Project Phone</label>
    <type>Text</type>
</CustomField>