force-app/main/default/objects/Project__c/fields/Show_Colleage_List__c.field-meta.xml
<CustomField>
    <fullName>Show_Colleage_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show College List</label>
    <type>Checkbox</type>
</CustomField>