force-app/main/default/objects/Project__c/validationRules/Percent_Valid_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_Valid_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Percent__c  &gt; 1.0   || 
Percent__c  &lt; 0.0</errorConditionFormula>
    <errorDisplayField>Percent__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>